@@ -17,6 +17,8 @@ Please visit http://aegisub.net to download latest version
    o When editing karaoke-timing for a line and not splitting/joining, all tags are kept intact, so only the \k tag timings are changed
 - Fixed bug where \t tags (among others?) would lose their parameters when being rebuilt (happens with Framerate Transport export filter, Automation and during the karaoke timing improvements listed above, among other places) (jfs)
 - Implemented FexTracker, for automatically tracking positions on the video and placing text accordingly (Tentacle)
+- Drag-and-drop files onto the program no longer causes the subs to be unloaded every time, even if no subs were dropped (jfs)
+- Recombining lines (1,1+2 and 1+2,2) where the lone line is a substring of the line only appearing combined no longer causes incorrect results (as a side-effect, more strict prefix/suffix-checking has also been implemented) (jfs)
 
 
 = 1.09 beta - 2006.01.16 ===========================
